# SmallCMakeProjectWithTests

./: .gitmodules  CMakeLists.txt  README.md
HelloWorldWriter/: CMakeLists.txt  HelloWorldWriter.cpp  HelloWorldWriter.h  main.cpp  test_Alltogether.cpp  test_setToOne.cpp  test_setToTwo.cpp  test_setToZero.cpp
RabinFingerprints/: CMakeLists.txt  main.c  rabin_polynomial.c  rabin_polynomial.h  run_rabin_fingerprint.sh
Training/: CMakeLists.txt  Training.cpp  Training.h
